Lots of changes
* Support generation of random station names
* Split out code paths for uniform vs random data generation.
* Write out USAGE
* General tidying

--- a/OneBillionWrites.xcodeproj/xcshareddata/xcschemes/OneBillionWrites.xcscheme
+++ b/OneBillionWrites.xcodeproj/xcshareddata/xcschemes/OneBillionWrites.xcscheme
@@ -52,6 +52,12 @@
             ReferencedContainer = "container:OneBillionWrites.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-r"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
